将画布绘制实现更改为笔刷